--- a/src/components/control/Control.scss
+++ b/src/components/control/Control.scss
@@ -1,10 +1,47 @@
 .control {
-    display: flex;
-    flex-direction: row;
+    display: inline-block;
+	overflow: hidden;
     position: absolute; 
-    top: 0; 
+    top: 5px; 
     right: 50%;
-    &__item :not(:last-child) {
-        margin-right: 10px;
+    &__item  {
+        float: left;
+        display: inline-block;
+
+        input[type=radio] {
+            display: none;
+          }
+      
+        label {
+            display: inline-block;
+            padding: 0px 15px;
+            line-height: 34px;
+            border: 1px solid #999;
+            border-right: none;
+            cursor: pointer;
+            user-select: none;
+          }
     }
+    .item-first {
+        label {
+          border-radius: 6px 0 0 6px;
+        }
+    
+        input[type=radio]:checked + label {
+          background: #ffc5c5;
+        }
+      }
+    
+      .item-second {
+        label {
+          border-radius: 0 6px 6px 0;
+          border-right: 1px solid #999;
+        }
+    
+        input[type=radio]:checked + label {
+          background: #bbffbb;
+        }
+      }
 }
+
+
